--- a/0708_Clock/css/estilo.css
+++ b/0708_Clock/css/estilo.css
@@ -29,7 +29,7 @@ body{
 
 .outer-clock-face{
     position: relative;
-    background-color: #fff;
+    background-color: #282828;
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -39,4 +39,26 @@ body{
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
+}
+.outer-clock-face::after,
+.outer-clock-face::before,
+.outer-clock-face .marking{
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background: #00ff95;
+    z-index: 0;
+    left: 49%;
+
+}
+.outer-clock-face .marking{
+    background: #bdbdcb;
+    width: 3px;
+}
+
+.outer-clock-face .marking.marking-five{
+    transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
 }
